Fixed gap below footer.

--- a/Styles/Site.css
+++ b/Styles/Site.css
@@ -99,7 +99,7 @@ img.hero {
 
 .footer{
     background-color: #76bea6;
-    height: 80px;
+    height: 90px;
     width: 100%;
 }
 
